# MyLifeGraph

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vercel.json
services/ai_service/: .env.example  README.md  pyproject.toml  requirements.txt
services/ai_service/app/: main.py
services/ai_service/tests/: test_account_api.py  test_account_delete_migration.py  test_account_export_privilege_migration.py  test_account_export_stream_bound.py  test_account_preparation_budget_migration.py  test_account_repository.py  test_account_service.py  test_application_table_privilege_guard_migration.py  test_auth.py  test_briefing_service.py  test_briefings_api.py  test_calendar_ical_parser.py  test_calendar_integration_repository.py  test_calendar_integration_service.py  test_calendar_integrations_api.py  test_calendar_request_identity_migration.py  test_coach_api.py  test_coach_context.py  test_coach_lock_order_migration.py  test_coach_migration.py  test_coach_models.py  test_coach_onboarding_eligibility_migration.py  test_coach_profile_privilege_migration.py  test_coach_repository.py  test_coach_role_authority_migration.py  test_coach_safety.py  test_coach_safety_provenance_migration.py  test_coach_service.py  test_deadline_plan_migration.py  test_deadline_plan_models.py  test_deadline_plan_repository.py  test_deadline_plan_service.py  test_deadline_plans_api.py  test_executable_actions.py  test_feedback_api.py  test_feedback_service.py  test_intake_api.py  test_intake_repository.py  test_intake_service.py  test_local_codex_provider.py  (+30 more)
(+429 files in other folders)
